--- a/apps/support/wordpress/overlays/homelab/wordpress-resources-patch.yaml
+++ b/apps/support/wordpress/overlays/homelab/wordpress-resources-patch.yaml
@@ -7,9 +7,17 @@ spec:
   template:
     spec:
       containers:
-      - name: wordpress
-        resources:
-          requests:
-            cpu: "200m"
-            memory: "512Mi"
-          limits: {}   # no CPU/MEM limits to avoid throttling
+        - name: php-fpm
+          resources:
+            requests:
+              cpu: 200m
+              memory: 512Mi
+            limits: {}   # no hard limits to avoid throttling
+        - name: nginx
+          resources:
+            requests:
+              cpu: 50m
+              memory: 64Mi
+            limits:
+              cpu: 500m
+              memory: 256Mi
