wordpress: add rbd wp-content pvc + migration job

--- a/apps/support/wordpress/base/kustomization.yaml
+++ b/apps/support/wordpress/base/kustomization.yaml
@@ -11,4 +11,5 @@ resources:
   - redis-statefulset.yaml
   - wordpress-service.yaml
   - wordpress-deployment.yaml
+  - wp-content-rbd-pvc.yaml
   - ingress.yaml
