--- a/apps/support/wordpress/overlays/homelab/kustomization.yaml
+++ b/apps/support/wordpress/overlays/homelab/kustomization.yaml
@@ -11,6 +11,15 @@ resources:
   - wp-nginx-configmap.yaml
 
 patches:
+  # 0) Ensure Deployment strategy=Recreate (remove rollingUpdate from existing live object)
+  - path: wordpress-strategy-recreate-jsonpatch.yaml
+    target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: wordpress
+      namespace: wordpress
+
   # 1) Resurser (CPU/MEM) för Wordpress
   - path: wordpress-resources-patch.yaml
     target:
