wordpress: simplify redis volumeClaimTemplate to reduce argocd diff

--- a/apps/support/wordpress/base/redis-statefulset.yaml
+++ b/apps/support/wordpress/base/redis-statefulset.yaml
@@ -64,9 +64,7 @@ spec:
             periodSeconds: 5
             failureThreshold: 12
   volumeClaimTemplates:
-    - apiVersion: v1
-      kind: PersistentVolumeClaim
-      metadata:
+    - metadata:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
