--- a/apps/support/wordpress/base/redis-statefulset.yaml
+++ b/apps/support/wordpress/base/redis-statefulset.yaml
@@ -64,7 +64,9 @@ spec:
             periodSeconds: 5
             failureThreshold: 12
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
