--- a/apps/support/wordpress/base/wordpress-deployment.yaml
+++ b/apps/support/wordpress/base/wordpress-deployment.yaml
@@ -189,6 +189,10 @@ spec:
             - name: nginx-conf
               mountPath: /etc/nginx/conf.d/default.conf
               subPath: default.conf
+            - name: nginx-cache
+              mountPath: /var/cache/nginx
+            - name: nginx-run
+              mountPath: /var/run
 
         - name: wp-cron-runner
           image: curlimages/curl:8.12.1
@@ -225,6 +229,10 @@ spec:
         - name: nginx-conf
           configMap:
             name: wp-nginx
+        - name: nginx-cache
+          emptyDir: {}
+        - name: nginx-run
+          emptyDir: {}
 
 ---
 apiVersion: v1
