--- a/apps/support/wordpress/base/redis-statefulset.yaml
+++ b/apps/support/wordpress/base/redis-statefulset.yaml
@@ -23,6 +23,9 @@ spec:
       labels:
         app: redis
     spec:
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       securityContext:
         seccompProfile:
@@ -61,6 +64,8 @@ spec:
             limits:
               cpu: 500m
               memory: 512Mi
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
           volumeMounts:
             - name: data
               mountPath: /data
@@ -97,6 +102,8 @@ spec:
         accessModes: ["ReadWriteOnce"]
         storageClassName: ceph-rbd
         volumeMode: Filesystem
+        status:
+          phase: Pending
         resources:
           requests:
             storage: 2Gi
