GitOps: patch argocd-cm to ignore volumeClaimTemplates status diffs

--- a/clusters/homelab/bootstrap/argocd-simple/kustomization.yaml
+++ b/clusters/homelab/bootstrap/argocd-simple/kustomization.yaml
@@ -8,3 +8,6 @@ resources:
   - https://raw.githubusercontent.com/argoproj/argo-cd/v3.1.0/manifests/install.yaml
   - ingress.yaml
   - certificate.yaml
+
+patchesStrategicMerge:
+  - argocd-cm-patch.yaml
