Add monitoring section (Argo project+appset) and kube-prometheus-stack scaffold

--- a/clusters/homelab/root/kustomization.yaml
+++ b/clusters/homelab/root/kustomization.yaml
@@ -8,3 +8,5 @@ resources:
   - applicationsets/system-tools.yaml
   - projects/project-support.yaml
   - applicationsets/support.yaml
+  - projects/project-monitoring.yaml
+  - applicationsets/monitoring.yaml
