--- a/clusters/homelab/root/kustomization.yaml
+++ b/clusters/homelab/root/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - applications/monitoring.yaml
   - projects/project-home-automation.yaml
   - applicationsets/home-automation.yaml
   - projects/project-system-tools.yaml
