--- a/apps/monitoring/pve-exporter/overlays/homelab/servicemonitor.yaml
+++ b/apps/monitoring/pve-exporter/overlays/homelab/servicemonitor.yaml
@@ -12,3 +12,9 @@ spec:
   endpoints:
     - port: http
       interval: 60s
+      path: /pve
+      params:
+        target:
+          - 10.10.10.11
+          - 10.10.10.12
+          - 10.10.10.13
