--- a/apps/monitoring/pve-exporter/overlays/homelab/deployment.yaml
+++ b/apps/monitoring/pve-exporter/overlays/homelab/deployment.yaml
@@ -28,6 +28,7 @@ spec:
           env:
             - name: PVE_VERIFY_SSL
               value: "false"
-          # IMPORTANT:
-          # This exporter is a proxy. Prometheus scrapes /pve?target=<proxmox-host>
-          # so we do NOT pass --pve=... args here.
+          args:
+            # Your token seems to lack Sys.Audit, which the cluster collector hits.
+            # Disable cluster collector to avoid 403s.
+            - --no-collector.cluster
