--- a/apps/monitoring/snmp-exporter/overlays/homelab/snmp-configmap.yaml
+++ b/apps/monitoring/snmp-exporter/overlays/homelab/snmp-configmap.yaml
@@ -5,12 +5,17 @@ metadata:
   namespace: monitoring
 data:
   snmp.yml: |
+    # snmp_exporter >=0.26 uses split auth config:
+    # https://github.com/prometheus/snmp_exporter/blob/main/auth-split-migration.md
+    auths:
+      public_v2:
+        version: 2
+        community: public
+
     modules:
       if_mib:
+        auth: public_v2
         walk:
           - 1.3.6.1.2.1.1
           - 1.3.6.1.2.1.2
           - 1.3.6.1.2.1.31.1.1
-        version: 2
-        auth:
-          community: public
