--- a/apps/monitoring/snmp-exporter/overlays/homelab/snmp-configmap.yaml
+++ b/apps/monitoring/snmp-exporter/overlays/homelab/snmp-configmap.yaml
@@ -5,12 +5,14 @@ metadata:
   namespace: monitoring
 data:
   snmp.yml: |
+    auths:
+      public_v2:
+        community: public
+        version: 2
+
     modules:
       if_mib:
         walk:
           - 1.3.6.1.2.1.1
           - 1.3.6.1.2.1.2
           - 1.3.6.1.2.1.31.1.1
-        version: 2
-        auth:
-          community: public
