Monitoring: ignore Namespace metadata drift to prevent perpetual OutOfSync

--- a/clusters/homelab/root/applicationsets/monitoring.yaml
+++ b/clusters/homelab/root/applicationsets/monitoring.yaml
@@ -24,6 +24,11 @@ spec:
       destination:
         server: https://kubernetes.default.svc
         namespace: monitoring
+      ignoreDifferences:
+        - group: ""
+          kind: Namespace
+          jqPathExpressions:
+            - .metadata
       syncPolicy:
         automated:
           prune: false
