--- a/apps/monitoring/snmp-exporter/overlays/homelab/deployment.yaml
+++ b/apps/monitoring/snmp-exporter/overlays/homelab/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: snmp-exporter
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: k3s-worker-02
       containers:
         - name: snmp-exporter
           image: quay.io/prometheus/snmp-exporter:v0.25.0
