--- a/apps/monitoring/monitoring/overlays/homelab/kube-prometheus-stack-values.yaml
+++ b/apps/monitoring/monitoring/overlays/homelab/kube-prometheus-stack-values.yaml
@@ -4,6 +4,9 @@
 
 prometheus:
   prometheusSpec:
+    externalUrl: https://monitoring.support4u.se
+    routePrefix: /
+
     retention: 15d
     scrapeInterval: 30s
     evaluationInterval: 30s
@@ -16,6 +19,10 @@ prometheus:
 
 alertmanager:
   enabled: true
+  alertmanagerSpec:
+    routePrefix: /alertmanager
+    externalUrl: https://monitoring.support4u.se/alertmanager
+
   # Let the chart manage the Secret (plaintext, per your accepted tradeoff)
   config:
     global:
@@ -38,6 +45,11 @@ alertmanager:
 
 grafana:
   enabled: true
+
+  grafana.ini:
+    server:
+      root_url: https://monitoring.support4u.se/grafana
+      serve_from_sub_path: true
 
   # Keep it simple; we already create an Ingress separately.
   service:
