Monitoring: set alertmanagerSpec.portName to satisfy kube-prometheus-stack chart

--- a/apps/monitoring/monitoring/overlays/homelab/kube-prometheus-stack-values.yaml
+++ b/apps/monitoring/monitoring/overlays/homelab/kube-prometheus-stack-values.yaml
@@ -20,6 +20,8 @@ alertmanager:
   enabled: true
   alertmanagerSpec:
     # NOTE: For Rancher (K8s API proxy) links to work reliably, avoid externalUrl/routePrefix.
+    # The chart expects portName to be set.
+    portName: http-web
 
   # Let the chart manage the Secret (plaintext, per your accepted tradeoff)
   config:
