--- a/apps/system-tools/grafana/overlays/homelab/ingress.yaml
+++ b/apps/system-tools/grafana/overlays/homelab/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana
-  namespace: monitoring
+  namespace: grafana
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-dns"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
